--- a/index.css
+++ b/index.css
@@ -5,15 +5,28 @@ body {
   margin: 0;
   padding: 0;
 }
-.container {
-  width: 80%;
-  height: 80%;
-  position: relative;
-  left: 10%;
-  margin: 0;
-  border: 1px solid #000;
+#bound {
+  width: 500px;
+  height: 400px;
+  box-sizing: content-box;
+  margin: 20px;
+  background: #eee url("/loading.svg") center center no-repeat;
+  border: 1px solid #999;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
 }
-#svg,
-#svg2 {
-  background: #eee;
+#svg {
+  background: #fff;
+  width: 100%;
+  height: 100%;
 }
+/*
+.container
+  width: 80%
+  height: 80%
+  position: relative
+  left: 10%
+  margin: 0
+  border: 1px solid #000
+#svg, #svg2
+  background: #eee
+*/
