move stylus into src/styl

--- a/index.jade
+++ b/index.jade
@@ -25,7 +25,7 @@ html(lang="en")
     // libraries
     include library.jade
     // custom files
-    link(rel="stylesheet",type="text/css",href="index.css")
+    link(rel="stylesheet",type="text/css",href="css/index.css")
     //script(type="text/javascript",src="main.js")
     script(type="text/javascript",src="static/js/voronoi.js")
     script(type="text/javascript",src="static/js/polygon.js")
