move js into lib

--- a/index.jade
+++ b/index.jade
@@ -27,10 +27,10 @@ html(lang="en")
     // custom files
     link(rel="stylesheet",type="text/css",href="css/index.css")
     //script(type="text/javascript",src="main.js")
-    script(type="text/javascript",src="static/js/voronoi.js")
-    script(type="text/javascript",src="static/js/polygon.js")
-    script(type="text/javascript",src="static/js/face.js")
-    script(type="text/javascript",src="static/js/convex.js")
+    script(type="text/javascript",src="static/js/lib/voronoi.js")
+    script(type="text/javascript",src="static/js/lib/polygon.js")
+    script(type="text/javascript",src="static/js/lib/face.js")
+    script(type="text/javascript",src="static/js/lib/convex.js")
     script(type="text/javascript",src="index.js")
   body
     #bound
