--- a/index.jade
+++ b/index.jade
@@ -25,19 +25,9 @@ html(lang="en")
     // libraries
     include library.jade
     // custom files
-    link(rel="stylesheet",type="text/css",href="css/index.css")
-    //script(type="text/javascript",src="main.js")
-    script(type="text/javascript",src="static/js/lib/voronoi.js")
-    script(type="text/javascript",src="static/js/lib/polygon.js")
-    script(type="text/javascript",src="static/js/lib/face.js")
-    script(type="text/javascript",src="static/js/lib/convex.js")
-    script(type="text/javascript",src="index.js")
+    link(rel="stylesheet",type="text/css",href="static/css/index.css")
+    script(type="text/javascript",src="dist/voronoi.min.js")
+    script(type="text/javascript",src="static/js/index.js")
   body
     #bound
       svg#svg(preserveAspectRatio="xMidYMid")
-      //-svg#svg(style="width:100%;height:100%;",preserveAspectRatio="xMidYMid")
-    //-
-      .container(style="margin-top: 25px;padding:0")
-        svg#svg2(width="100%", height="100%", preserveAspectRatio="xMidYMid")
-      .container(style="margin-top: 25px;padding:0")
-        svg#svg3(width="100%", height="100%", preserveAspectRatio="xMidYMid")
