--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,18 +4,39 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
 }
-#bound {
-  width: 800px;
-  height: 600px;
+#root {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: bold;
+}
+#demonstration {
+  width: 1200px;
+  height: 630px;
   box-sizing: content-box;
-  margin: 20px;
-  background: #eee url("/loading.svg") center center no-repeat;
-  border: 1px solid #999;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  margin: 0 auto;
+  background: #eee url("../../img/loading.svg") center center no-repeat;
 }
 #svg {
   background: #fff;
   width: 100%;
   height: 100%;
+}
+#usage {
+  max-width: 1024px;
+  margin: auto;
+}
+#footer a {
+  margin-left: 20px;
 }
