--- a/index.jade
+++ b/index.jade
@@ -1,7 +1,7 @@
 doctype html
 //- basic libraries: jquery(1.10.2), d3js(3.5.4), angularjs(1.2.3), bootstrap(3.0)/semantic-ui(0.9.3/0.9.5)
 //-                  fontawesome(4.4.0), reactjs(0.14.0)
-- var use = { cdn: false, og: true, favicon: true }
+- var use = { cdn: true, og: true, favicon: true }
 - var lib = { jquery: true, d3js: true, angular: true, bootstrap: true, semantic: false, fontawesome: true, reactjs: false }
 - var assets = "assets"
 - var favicon = "http://zbryikt.github.io/voronoijs/img/favicon.png"
