--- a/web/src/styl/index.styl
+++ b/web/src/styl/index.styl
@@ -1,12 +1,9 @@
-@import vars
-@import basic
-
 html,body
   width: 100%
   height: 100%
   margin: 0
   padding: 0
-  uselato()
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif
   font-size: 18px
 
 #root
@@ -19,13 +16,11 @@ h1,h2,h3,h4,h5,h6
   font-weight: bold
 
 #demonstration
-  //height: 70%
-  //width: 60%
   width: 1200px
   height: 630px
   box-sizing: content-box
   margin: 0 auto
-  background: #eee url(../../img/loading.svg) center center no-repeat
+  background: #eee url(../assets/img/loading.svg) center center no-repeat
 
 #svg
   background: #fff
