--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: bold;
 }
 #demonstration {
@@ -26,7 +25,7 @@ h6 {
   height: 630px;
   box-sizing: content-box;
   margin: 0 auto;
-  background: #eee url("../../img/loading.svg") center center no-repeat;
+  background: #eee url("../assets/img/loading.svg") center center no-repeat;
 }
 #svg {
   background: #fff;
